{
  "version": 4,
  "terraform_version": "1.5.4",
  "serial": 41,
  "lineage": "ae38d200-8d1e-998f-afd2-d81b92e7fa8d",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-08-05T07:05:08.215-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/udapeople-395002/global/firewalls/allow-http",
            "log_config": [],
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/udapeople-395002/global/networks/my-vpc",
            "priority": 1000,
            "project": "udapeople-395002",
            "self_link": "https://www.googleapis.com/compute/v1/projects/udapeople-395002/global/firewalls/allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "jenkins-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http_postgress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "5432"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-08-05T08:02:50.623-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/udapeople-395002/global/firewalls/allow-http-postgres",
            "log_config": [],
            "name": "allow-http-postgres",
            "network": "https://www.googleapis.com/compute/v1/projects/udapeople-395002/global/networks/my-vpc",
            "priority": 1000,
            "project": "udapeople-395002",
            "self_link": "https://www.googleapis.com/compute/v1/projects/udapeople-395002/global/firewalls/allow-http-postgres",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "postgres-db"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-08-05T07:05:08.354-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/udapeople-395002/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/udapeople-395002/global/networks/my-vpc",
            "priority": 1000,
            "project": "udapeople-395002",
            "self_link": "https://www.googleapis.com/compute/v1/projects/udapeople-395002/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "jenkins-server",
              "jumpbox"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh_postgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-08-06T01:59:28.203-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/udapeople-395002/global/firewalls/allow-ssh-postgres",
            "log_config": [],
            "name": "allow-ssh-postgres",
            "network": "https://www.googleapis.com/compute/v1/projects/udapeople-395002/global/networks/my-vpc",
            "priority": 1000,
            "project": "udapeople-395002",
            "self_link": "https://www.googleapis.com/compute/v1/projects/udapeople-395002/global/firewalls/allow-ssh-postgres",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": [
              "jumpbox"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "postgres-db"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "egress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-08-05T07:05:08.218-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/udapeople-395002/global/firewalls/egress-all",
            "log_config": [],
            "name": "egress-all",
            "network": "https://www.googleapis.com/compute/v1/projects/udapeople-395002/global/networks/my-vpc",
            "priority": 1000,
            "project": "udapeople-395002",
            "self_link": "https://www.googleapis.com/compute/v1/projects/udapeople-395002/global/firewalls/egress-all",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}